--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<input type="checkbox" id="id">
+		<label for="id" class="switch">
+			<div class="circle"></div>
+		</label>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
